# synup-sdk

./: .gitignore  404.html  README.md  explorer.js  index.html  mkdocs.yml  objects.inv  pyproject.toml  styles.css
.github/workflows/: publish.yml
api-reference/: index.html
dashboard/: README.md  app.py  index.html  requirements.txt
docs/: api-reference.md  dashboard.md  getting-started.md  index.md  use-cases.md
examples/: 01_quickstart.py  02_bulk_export_locations.py  03_review_monitoring.py  04_bulk_respond_reviews.py  05_analytics_report.py  06_listings_audit.py  07_user_management.py  08_google_connect_flow.py  09_grid_rank_report.py  10_review_campaign.py  11_fastapi_backend.py  README.md  bulk_location_onboarding.py  listings_health_check.py  review_auto_responder.py  weekly_report.py
examples/fullstack/: server.py
examples/fullstack/static/: index.html
frontend/: explorer.js  index.html  proxy.py  styles.css
getting-started/: index.html
search/: search_index.json
src/synup/: __init__.py  _client.py  _types.py  _utils.py  client.py  exceptions.py
src/synup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/synup/resources/: __init__.py  _base.py  analytics.py  automations.py  campaigns.py  connected_accounts.py  folders.py  grid_reports.py  keywords.py  listings.py  locations.py  photos.py  reviews.py  tags.py  users.py  workflows.py
src/synup_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_client.py  test_synup.py
use-cases/: index.html
